examples/test/testpolicy18544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18544
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key27: value44
      key20: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value44
          key14: value10
          key23: value20
      podSelector:
        matchLabels:
          key0: value14
          key45: value30
          key28: value48
